--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.4.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.1",
     "styled-components": "^5.3.5"
   },
