--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^11.2.2",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^12.0.11",
+    "msw": "^0.47.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.4.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.1",
+    "react-test-renderer": "^18.2.0",
     "styled-components": "^5.3.5"
   },
   "scripts": {
