--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-router-dom": "^6.4.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.1",
-    "react-test-renderer": "^18.2.0",
+    "react-test-renderer": "17.0.1",
     "styled-components": "^5.3.5"
   },
   "scripts": {
