--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "TZ=America/Chicago react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test": "TZ=America/Chicago react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "format": "eslint --fix .",
