Return only one list of posts in useFetchPosts hook, fixed components related to the change, tests still need to be fixed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         wait-on: 'http://localhost:3000'
         env: branch-name=${{ github.head_ref }}
       env:
-        TZ: Europe/Berlin
+        TZ: America/Chicago
 
     - name: Build
       run: yarn build
