--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^12.0.11",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "msw": "^0.47.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
@@ -15,7 +21,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.1",
     "react-test-renderer": "17.0.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +50,6 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "cypress": "^6.1.0",
-    "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.22.0",
