--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-router-hash-link": "^2.4.5",
     "@types/styled-components": "^5.1.26",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "msw": "^0.47.4",
