--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@eslint/create-config": "^0.4.0",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^11.2.2",
     "@testing-library/react-hooks": "^8.0.1",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^18.0.8",
     "@types/react-router-hash-link": "^2.4.5",
     "@types/styled-components": "^5.1.26",
+    "eslint-plugin-react": "^7.31.10",
     "msw": "^0.47.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
@@ -48,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "cross-env": "^7.0.3",
     "cypress": "^6.1.0",
     "husky": "^5.1.3"
